tests/bad/frontendErrors/functionCallError.latte
void f(int x) {
	return;
}

int main() {
	f(1, 2);
	return 0;
}
